# senarai

./: .gitignore  Cargo.toml  Makefile  README.md  build.sh  config.yaml
.github/workflows/: rust.yml
src/: app.rs  config.rs  consts.rs  database.rs  input.rs  lib.rs  main.rs  storage.rs  ui.rs
test/: app_tests.rs
