[package]
name = "senarai"
version = "0.1.2"
edition = "2021"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
shellexpand = "3.1.1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
unicode-segmentation = "1.10.0"
uuid = { version = "1.18.1", features = ["v4", "serde"] }

[[test]]
name = "app_tests"
path = "test/app_tests.rs"
